--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ form.addEventListener("submit", async (e) => {
 
   // ======= GAS へ非同期送信 =======
   try {
-  await fetch("https://reservations.thinklayer.jp/", {
+  await fetch("https://reservations.demover222.workers.dev/", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(data)
@@ -142,4 +142,5 @@ form.addEventListener("submit", async (e) => {
 </body>
 
 </html>
+
 
